--- a/README
+++ b/README
@@ -1,19 +1,30 @@
 
 Project :
 =========
-    FlickDupFinder
+    FlickDupFinder 2
 
+
+Live :
+=========
+    flickrdupfinder.danielmorton.co
+ 
 Description :
 =============
     Find duplicate photos on your Flickr Account.
     
-Author :
-========
+
+Current Author :
+=================
+    Dan Morton
+    http://www.DanielMorton.co/
+    
+Original Author :
+=================
     Christophe Maillot
     http://www.christophemaillot.fr/
     
 FlickrDupFinder online :
 ========================
     FlickrDupFinder is running online at :  
-    http://www.christophemaillot.fr/flickrdupfinder/
+    http://flickrdupfinder.danielmorton.co/
     
